# pontarius-service

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE.md  README.md  dbus-interface.xml  docker-build  format-interface.el  mkinterface.sh  pontarius-service.cabal  schema
client/: DBusInterface.hs  GUI.hs  Main.hs
docker/: dbus.init  pontarius-service.runit  start.sh
prosody-docker/: Dockerfile  build  prosody.cfg.lua  run
source/: Basic.hs  Client.hs  DBusInterface.hs  Gpg.hs  Main.hs  Persist.hs  Signals.hs  Transactions.hs  Types.hs  Xmpp.hs
source/Persist/: Schema.hs  Stage.hs
source/PontariusService/: Types.hs
testclient/: Dockerfile  Interface.hs  Main.hs  Test.hs
