name:                pontarius-service
version:             0.0.0.0
synopsis:            Pontarius Service
description:         This is a work in progress of a service that will manage
                     the configurations, credentials, and local storage, of
                     Pontarius users. It will expose its API over the D-BUS
                     inter-process communication protocol. This enables
                     Pontarius to be integrated with other applications, such as
                     FreeDesktop.org environments.
homepage:            http://www.pontarius.org/
license:             AGPL-3
license-file:        LICENSE
author:              Jon Kristensen, Philipp Balzarek
maintainer:          info@jonkri.com
copyright:           Jon Kristensen
category:            Privacy
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files:  schema

executable pontarius-service
  main-is:             Main.hs
  other-modules:       Basic
                     , DBusInterface
                     , Persist
                     , Persist.Stage
                     , Types
                     , Xmpp
                     , Signals

  build-depends: base >=4.6 && < 5
               , base64-bytestring >= 1.0.0.1
               , bytestring
               , containers >= 0.5.5.1
               , crypto-pubkey
               , cryptohash >= 0.11
               , d-bus
               , either
               , exceptions >= 0.6
               , hslogger >= 1.2.4
               , lens >= 4.4
               , monad-logger >= 0.3.6.1
               , mtl >= 2.1.3.1
               , persistent >= 2.0
               , persistent-sqlite
               , persistent-template
               , pontarius-gpg
               , pontarius-xmpp
               , pontarius-xmpp-e2e
               , random >= 1.0.1
               , resourcet >= 1.1.2.2
               , singletons >= 1.0
               , stm
               , template-haskell
               , text
               , time
               , tls
               , transformers >= 0.4
               , unbounded-delays >= 0.1.0.8
               , uuid
               , xml-picklers >= 0.3.5
               , xml-types >= 0.3.4
  hs-source-dirs:      source
  default-language:    Haskell2010
  default-extensions: OverloadedStrings
                    , NoMonomorphismRestriction
                    , NumDecimals
  other-extensions:   TemplateHaskell
                    , QuasiQuotes
                    , DataKinds
                    , TypeFamilies
  ghc-options: -Wall -fno-warn-orphans -fno-warn-name-shadowing

executable client
  main-is:             Main.hs
  other-modules:       DBusInterface
  -- other-extensions:
  build-depends:       base >=4.6 && < 5
                     , lens
                     , persistent-sqlite
                     , pontarius-xmpp
                     , pontarius-xmpp-e2e
                     , template-haskell
                     , time
--                     , pontarius-xmpp-e2e
                     , d-bus
                     , text
                     , mtl
                     , directory
                     , filepath
                     , hslogger
                     , network
                     , bytestring
                     , transformers
                     , gtk
                     , containers
                     , prototyper
                     , stm
                     , unbounded-delays
                     , sodium
                     , d-bus-reactive
                     , uuid
--                     , vty-ui
  hs-source-dirs:      client, source
  default-language:    Haskell2010