name:                pontarius-service
version:             0.0.0.0
synopsis:            Pontarius Service
description:         This is a work in progress of a service that will manage
                     the configurations, credentials, and local storage, of
                     Pontarius users. It will expose its API over the D-BUS
                     inter-process communication protocol. This enables
                     Pontarius to be integrated with other applications, such as
                     FreeDesktop.org environments.
homepage:            http://www.pontarius.org/
license:             AGPL-3
license-file:        LICENSE
author:              Jon Kristensen, Philipp Balzarek
maintainer:          info@jonkri.com
copyright:           Jon Kristensen
category:            Privacy
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files:  schema

library
  hs-source-dirs: source
  exposed-modules: PontariusService.Types
  build-depends: base >= 4.6 && <5
               , bytestring
               , containers
               , d-bus
               , exceptions >= 0.8.0.2
               , lens
               , mtl
               , pontarius-xmpp
               , pontarius-xmpp-e2e
               , stm
               , text
               , time
               , uuid
  default-language: Haskell2010

executable pontarius-service
  main-is:             Main.hs
  other-modules:       Basic
                     , DBusInterface
                     , Persist
                     , Persist.Stage
                     , Signals
                     , State
                     , Types
                     , Xmpp
  build-depends: aeson >= 0.9
               , base >=4.6 && < 5
               , base64-bytestring >= 1.0.0.1
               , bytestring
               , containers >= 0.5.5.1
               , crypto-pubkey
               , cryptohash >= 0.11
               , d-bus >= 0.1.3.2
               , either
               , exceptions >= 0.6
               , exceptions >= 0.8.0.2
               , filepath >= 1.4
               , hslogger >= 1.2.4
               , http-api-data
               , lens >= 4.5
               , monad-logger >= 0.3.6.1
               , mtl >= 2.1.3.1
               , path-pieces >= 0.2
               , persistent >= 2.0
               , persistent-sqlite
               , persistent-template
               , pontarius-gpg
               , pontarius-xmpp
               , pontarius-xmpp-e2e
               , random >= 1.0.1
               , resourcet >= 1.1.2.2
               , singletons >= 1.0
               , stm
               , template-haskell
               , text
               , time
               , tls
               , transformers >= 0.4
               , unbounded-delays >= 0.1.0.8
               , uuid
               , xml-picklers >= 0.3.5
               , xml-types >= 0.3.4
  hs-source-dirs:      source
  default-language:    Haskell2010
  default-extensions: OverloadedStrings
                    , NoMonomorphismRestriction
                    , NumDecimals
  other-extensions:   TemplateHaskell
                    , QuasiQuotes
                    , DataKinds
                    , TypeFamilies
  ghc-options: -Wall -fno-warn-orphans -fno-warn-name-shadowing

executable testclient
  main-is:             Main.hs
  other-modules:       Interface
                     , Test
  -- other-extensions:
  build-depends:       ansi-terminal
                     , base >=4.6 && < 5
                     , bytestring
                     , d-bus
                     , d-bus-reactive
                     , exceptions >= 0.8.0.2
                     , filepath >= 1.4
                     , hslogger >= 1.2
                     , lens
                     , mtl
                     , pontarius-service
                     , sodium
                     , stm
                     , text
                     , time >= 1.5
                     , uuid
  hs-source-dirs:      testclient
  ghc-options:         -threaded
  default-language:    Haskell2010
